[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyflume_influxdb"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "Python library for Flume water sensor devices with InfluxDB integration"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "influxdb-client>=1.39.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aioresponses>=0.7.4",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[project.urls]
Homepage = "https://github.com/joubin/pyflume-influxdb"
Issues = "https://github.com/joubin/pyflume-influxdb/issues"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pyflume_influxdb --cov-report=term-missing" 